@@ -54,6 +54,7 @@ Included
 - Document strict route now fails closed on partial OOXML ZIP metadata even when structural markers are present, preventing mixed valid/corrupt office-document acceptance.
 - Document strict route now requires both PDF header and EOF marker evidence for explicit `.pdf` analysis, preventing header-only placeholder inputs from passing strict document routing.
 - Document strict route now requires PDF object-syntax evidence (`<obj> <gen> obj`) plus structural marker evidence (`xref`/catalog/trailer) for explicit `.pdf` analysis, preventing loose-token placeholder inputs from passing strict document routing.
+- Document strict route now requires PDF `startxref` marker evidence for explicit `.pdf` analysis, preventing object+trailer placeholder inputs from passing strict document routing.
 - Document strict route now requires a strict RTF prolog (`{\\rtf1`), baseline control-word evidence (`\\ansi`/`\\deff`), and closing-brace evidence for explicit `.rtf` analysis, preventing partial/plaintext placeholders from passing strict document routing.
 - Document strict route now requires minimum CHM structural header evidence (including header-length sanity) for explicit `.chm` analysis, preventing tiny header-only placeholders from passing strict document routing.
 - IaC/CI adapter extraction deepened:
